Completed initial version of the Scalding Trap

--- a/src/main/resources/assets/pressurizeddefence/lang/en_us.lang
+++ b/src/main/resources/assets/pressurizeddefence/lang/en_us.lang
@@ -7,3 +7,6 @@ item.pressurizeddefence.turret_bullet_heavy.name=Heavy Turret Bullet
 item.pressurizeddefence.speed_upgrade.name=Speed Upgrade
 
 entity.pressurizeddefence.turret_projectile.name=Turret
+
+death.attack.steam_turret=%1$s was fatally shot by a turret
+death.attack.steam_scalding_trap=%1$s suffered severe burns from a scalding trap
