Blowback cannons, for when your personal space is being invaded.
also some other little bits

--- a/src/main/resources/assets/pressurizeddefence/lang/en_us.lang
+++ b/src/main/resources/assets/pressurizeddefence/lang/en_us.lang
@@ -13,3 +13,5 @@ death.attack.steam_turret=%1$s was fatally shot by a turret
 death.attack.steam_scalding_trap=%1$s suffered severe burns from a scalding trap
 
 itemGroup.pressurizeddefence=Pressurized Defence
+
+tile.pressurizeddefence.steam=Steam: %1$s/%2$s
