Name some stuff, and make things hard.

--- a/src/main/resources/assets/pressurizeddefence/lang/en_us.lang
+++ b/src/main/resources/assets/pressurizeddefence/lang/en_us.lang
@@ -1,6 +1,8 @@
 tile.pressurizeddefence.boiler.name=Steam Boiler
 tile.pressurizeddefence.turret.name=Turret
 tile.pressurizeddefence.scalding_trap.name=Scalding Trap
+tile.pressurizeddefence.pipe.name=Pipe
+tile.pressurizeddefence.blowback_cannon.name=Blowback Cannon
 
 item.pressurizeddefence.turret_bullet.name=Turret Bullet
 item.pressurizeddefence.turret_bullet_light.name=Light Turret Bullet
